# ipsatfitter

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  filelist.m
data/: hera_combined_diffxs.txt  hera_combined_sigmar.txt
libColorDipole/src/: Test_Dipole.f
src/: CMakeLists.txt  LO_evolution_routine.f  alphaS.f  data.cpp  data.hpp  dipoleamplitude.cpp  dipoleamplitude.hpp  dis.cpp  dis.hpp  gitsha1.cpp.in  inclusive_diffraction.cpp  interpolation.cpp  interpolation.hpp  interpolation2d.cpp  interpolation2d.hpp  ipsat.cpp  ipsat.hpp  main.cpp  ugd_from_ipsat.cpp  virtual_photon.cpp  virtual_photon.hpp  wave_function.cpp  wave_function.hpp  woodsaxon.cpp  woodsaxon.hpp
src/dglap_cpp/: AlphaStrong.cpp  AlphaStrong.h  EvolutionLO.cpp  EvolutionLO_coupling.cpp  EvolutionLO_nocoupling.cpp  EvolutionLO_nocoupling.h  alphasTest.cpp  alphasTest.f  testEvolCC.cpp  testEvolFortran.f
src/dglap_sartre/: AlphaStrong.cpp  AlphaStrong.h  Dglap.cpp  Dglap.h  DglapEvolution.cpp  DglapEvolution.h  Laguerre.cpp  Laguerre.h  Parameters_bSat.h  dglap.c  laguerre.c
tools/: create_light_f2.cpp
